add support for CMakeExtraFlags

--- a/Sdk/Sdk.props
+++ b/Sdk/Sdk.props
@@ -29,5 +29,8 @@
         <IncludeBuildOutput>false</IncludeBuildOutput>
 
         <RuntimeIdentifier>$(InRuntimeIdentifier)</RuntimeIdentifier>
+
+        <!-- Extra flags passed to CMake configure -->
+        <CMakeExtraFlags></CMakeExtraFlags>
     </PropertyGroup>
 </Project>
